--- a/function_arity.js.html
+++ b/function_arity.js.html
@@ -79,7 +79,7 @@
         <pre
             class="sunlight-highlight-javascript linenums">// jshint maxcomplexity: false
 /**
- * Create a new function with the specified rarity between 0 and 10.
+ * Create a new function with the specified arity between 0 and 10.
  *
  * @param {number} n
  * @param {function} fn
